[metadata]
name = tornado-tryton
version = 1.0.1
author = James Sparc
author_email = jimmysparc@gmail.com
description = Adds Tryton support to Tornado application.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TinKurbatoff/tornado-tryton
project_urls =
    Bug Tracker = https://github.com/TinKurbatoff/tornado-tryton/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL) 
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src